Fixed search result word wrap

--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -143,7 +143,6 @@
     display: inline-block;
     width: 40%;
     padding-right: $sp-2;
-    word-wrap: break-word;
     vertical-align: top;
   }
 }
@@ -151,6 +150,7 @@
 .search-result-doc {
   display: flex;
   align-items: center;
+  word-wrap: break-word;
 
   &.search-result-doc-parent {
     opacity: 0.5;
@@ -171,6 +171,7 @@
 
 .search-result-section {
   margin-left: #{$sp-4 + $sp-2};
+  word-wrap: break-word;
 }
 
 .search-result-rel-url {
